syntax = "proto3";

package twitter;

option go_package = "/grpcTwitter";

message User {
  int32 id = 1;
  string username = 2;
  string name = 3;
}

message Tweet {
  int32 id = 1;
  User user = 2;
  string text = 3;
  int64 timestamp = 4;
}

message CreateTweetRequest{
  User user = 1;
  string text = 2;
}

message CreateTweetResponse {
  Tweet tweet = 1;
}

message GetTweetRequest {
  int32 id = 1;
}

message GetTweetResponse {
  Tweet tweet = 1;
}

service TwitterService {
  rpc CreateTweet(CreateTweetRequest) returns (CreateTweetResponse);
  rpc GetTweet(GetTweetRequest) returns (GetTweetResponse);
}